src/types/tests/snapshots/tgbot__types__tests__suggested_post__approve_suggested_post.snap
---
source: src/types/tests/suggested_post.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2
}
