src/types/tests/snapshots/tgbot__types__tests__suggested_post__decline_suggested_post-2.snap
---
source: src/types/tests/suggested_post.rs
expression: actual_data
---
{
  "chat_id": 1,
  "comment": "test",
  "message_id": 2
}
