src/types/tests/snapshots/tgbot__types__tests__suggested_post__suggested_post_info-2.snap
---
source: src/types/tests/suggested_post.rs
expression: expected_struct
---
{
  "state": "approved",
  "price": {
    "amount": 1,
    "currency": "test"
  },
  "send_date": 1
}
