src/types/tests/snapshots/tgbot__types__tests__suggested_post__suggested_post_paid-2.snap
---
source: src/types/tests/suggested_post.rs
expression: expected_struct
---
{
  "currency": "test",
  "amount": 1,
  "star_amount": {
    "amount": 2,
    "nanostar_amount": null
  },
  "suggested_post_message": {
    "chat": {
      "type": "private",
      "id": 1,
      "first_name": "John"
    },
    "date": 2,
    "has_protected_content": false,
    "message_id": 1,
    "is_automatic_forward": false,
    "from": {
      "first_name": "John",
      "id": 1,
      "is_bot": false
    },
    "text": "test"
  }
}
