src/types/tests/snapshots/tgbot__types__tests__suggested_post__suggested_post_paid.snap
---
source: src/types/tests/suggested_post.rs
expression: expected_struct
---
{
  "currency": "test"
}
